# linux-remote-plugin

./: .env.example  LICENSE  README.md  SKILL.md  hosts.yaml.example  manifest.json  package.json  pyproject.toml
.alma-plugin/: manifest.json  runtime_adapter.py
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
skills/lr/: SKILL.md
src/alma_linux_remote_plugin/: __init__.py  audit.py  cli.py  config.py  models.py  runtime_adapter.py  safety.py  session_manager.py  ssh.py  tools.py
src/linux_remote_plugin/: __init__.py  __main__.py  audit.py  cli.py
src/linux_remote_tool/: cli.py  codex_bridge.py  config.py  models.py  runtime_adapter.py  session_manager.py  tools.py
tests/: conftest.py  test_audit.py  test_cli.py  test_codex_bridge.py  test_compat_imports.py  test_config.py  test_models.py  test_plugin_layout.py  test_runtime_adapter.py  test_safety.py  test_session_manager.py  test_ssh.py  test_tools.py
